--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Hacker - David naka nugroho mustakim</title>
   </head>
   <body>
-    <script src="Kalkulator.js"></script>
+    <script src="tugasdavid3.js"></script>
   </body>
 </html>
